--- a/spring-mvc/src/main/webapp/WEB-INF/views/books/list.jspx
+++ b/spring-mvc/src/main/webapp/WEB-INF/views/books/list.jspx
@@ -11,7 +11,7 @@
         title and the labels are changed to use the i18n messages.    
      -->
     <spring:message code="label_book_list" var="labelBookList"/>
-    <spring:message code="label_book_category_name" var="labelBookCategoryName"/>
+    <spring:message code="label_book_categoryname" var="labelBookCategoryName"/>
     <spring:message code="label_book_isbn" var="labelBookIsbn"/>
     <spring:message code="label_book_title" var="labelBookTitle"/>
     <spring:message code="label_book_publisher" var="labelBookPublisher"/>
@@ -30,7 +30,7 @@
                 colNames:['${labelBookCategoryName}', '${labelBookIsbn}',
                     '${labelBookTitle}', '${labelBookPublisher}', '${labelBookPrice}'],
                 colModel :[
-                    {name:'category_name', index:'category_name', width:100},
+                    {name:'categoryname', index:'categoryname', width:100},
                     {name:'isbn', index:'isbn', width:100},
                     {name:'title', index:'title', width:100},
                     {name:'publisher', index:'publisher', width:100},
